--- a/pom.xml
+++ b/pom.xml
@@ -605,6 +605,7 @@
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
+		    <optional>true</optional>
 		</dependency>
 
 	</dependencies>
