--- a/pom.xml
+++ b/pom.xml
@@ -382,8 +382,8 @@
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
 		<springfox.version>3.0.0-SNAPSHOT</springfox.version>
-		<swagger.version>1.5.21</swagger.version>
-		<swagger-bootstrap-ui.version>1.9.2</swagger-bootstrap-ui.version> 
+		<swagger.version>1.5.22</swagger.version>
+		<swagger-bootstrap-ui.version>1.9.3</swagger-bootstrap-ui.version> 
 		<swagger-butler.version>1.2.0</swagger-butler.version>
 	</properties>
 	
@@ -590,14 +590,42 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.swagger</groupId>
+		    <artifactId>swagger-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.swagger</groupId>
+		    <artifactId>swagger-models</artifactId>
+		</dependency>
+		
+        <dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-schema</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-common</artifactId>
+		</dependency>
  		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-bean-validators</artifactId>
 		</dependency>
+		
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
 		</dependency>
+		
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-spring-webflux</artifactId>
