--- a/pom.xml
+++ b/pom.xml
@@ -381,10 +381,8 @@
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
-		<springfox.version>3.0.0-SNAPSHOT</springfox.version>
-		<swagger.version>1.5.22</swagger.version>
-		<swagger-bootstrap-ui.version>1.9.3</swagger-bootstrap-ui.version> 
-		<swagger-butler.version>1.2.0</swagger-butler.version>
+		<springfox.version>2.10.5</springfox.version> <!-- 3.0.0-SNAPSHOT -->
+		<swagger.version>1.5.24</swagger.version>
 	</properties>
 	
 	<dependencyManagement>
