--- a/pom.xml
+++ b/pom.xml
@@ -383,97 +383,17 @@
 		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
 		<springfox.version>3.0.0</springfox.version> <!-- 3.0.0-SNAPSHOT -->
 		<swagger.version>1.5.24</swagger.version>
+		<swagger2.version>2.1.3</swagger2.version>
+		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version> 
 	</properties>
 	
 	<dependencyManagement>
 		<dependencies>
- 			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-bean-validators -->
+			
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
 			<dependency>
 			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-bean-validators</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-core -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-core</artifactId>
-			   <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-data-rest -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-data-rest</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-petstore -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-petstore</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-petstore-webflux</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-schema -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-schema</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spi -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spi</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-config -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-config</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-integration</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration-webflux -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-integration-webflux</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration-webmvc -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-integration-webmvc</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-web -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-web</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-webflux -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-webflux</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-webmvc -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-webmvc</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-common -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-swagger-common</artifactId>
+			    <artifactId>springfox-boot-starter</artifactId>
 			    <version>${springfox.version}</version>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
@@ -481,27 +401,21 @@
 			    <groupId>io.springfox</groupId>
 			    <artifactId>springfox-swagger-ui</artifactId>
 			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger1 -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-swagger1</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-swagger2</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
+			</dependency> 
 			
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-web -->
 			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-spring-web</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			
+		      <groupId>io.swagger.core.v3</groupId>
+		      <artifactId>swagger-annotations</artifactId>
+		      <version>2.1.2</version>
+		      <scope>compile</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>io.swagger.core.v3</groupId>
+		      <artifactId>swagger-models</artifactId>
+		      <version>2.1.2</version>
+		      <scope>compile</scope>
+		    </dependency>
+		    
 			<!-- https://mvnrepository.com/artifact/io.swagger -->
 			<dependency>
 				<groupId>io.swagger</groupId>
@@ -542,6 +456,30 @@
 			    <groupId>io.swagger</groupId>
 			    <artifactId>swagger-hibernate-validations</artifactId>
 			    <version>${swagger.version}</version>
+			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/io.swagger.core.v3 -->
+			<dependency>
+				<groupId>io.swagger.core.v3</groupId>
+				<artifactId>swagger-core</artifactId>
+				<version>${swagger2.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.swagger.core.v3</groupId>
+				<artifactId>swagger-annotations</artifactId>
+				<version>${swagger2.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.swagger.core.v3</groupId>
+				<artifactId>swagger-models</artifactId>
+				<version>${swagger2.version}</version>
+			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/com.github.xiaoymin/swagger-bootstrap-ui -->
+			<dependency>
+				<groupId>com.github.xiaoymin</groupId>
+				<artifactId>swagger-bootstrap-ui</artifactId>
+				<version>${swagger-bootstrap-ui.version}</version>
 			</dependency>
 			
 		</dependencies>
@@ -595,7 +533,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
-        
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webflux</artifactId>
+		</dependency>
+		
+		<!-- For Swagger2 -->
         <dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
@@ -608,40 +551,19 @@
 		    <groupId>io.swagger</groupId>
 		    <artifactId>swagger-models</artifactId>
 		</dependency>
-		
         <dependency>
 		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-core</artifactId>
+		    <artifactId>springfox-boot-starter</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-schema</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-common</artifactId>
-		</dependency>
- 		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-bean-validators</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger2</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-spring-webflux</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webflux</artifactId>
-		</dependency>
-		
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>swagger-bootstrap-ui</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
