--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,7 @@
 		<swagger.version>1.5.24</swagger.version>
 		<swagger2.version>2.1.3</swagger2.version>
 		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version> 
+		<webjars-locator.version>0.40</webjars-locator.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -482,6 +483,13 @@
 				<version>${swagger-bootstrap-ui.version}</version>
 			</dependency>
 			
+			<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
+			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>webjars-locator</artifactId>
+				<version>${webjars-locator.version}</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 	
@@ -565,7 +573,12 @@
 			<artifactId>swagger-bootstrap-ui</artifactId>
 			<optional>true</optional>
 		</dependency>
-
+		<!-- For Webjars -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+		</dependency>
+		
 	</dependencies>
 	
 
