--- a/pom.xml
+++ b/pom.xml
@@ -382,7 +382,7 @@
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
 		<springfox.version>2.10.5</springfox.version> <!-- 3.0.0-SNAPSHOT -->
-		<swagger.version>1.5.24</swagger.version>
+		<swagger.version>1.6.2</swagger.version>
 		<webjars-locator.version>0.40</webjars-locator.version>
 	</properties>
 	
@@ -557,6 +557,13 @@
 	
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>compile</scope>
+		</dependency>
+		
 		<!-- Java Servlet API -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
