--- a/pom.xml
+++ b/pom.xml
@@ -382,10 +382,12 @@
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
 		<springfox.version>3.0.0</springfox.version> <!-- 3.0.0-SNAPSHOT -->
-		<swagger.version>1.5.24</swagger.version>
+		<swagger.version>1.6.2</swagger.version>
 		<swagger2.version>2.1.3</swagger2.version>
 		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version> 
 		<webjars-locator.version>0.40</webjars-locator.version>
+		<webjars-locator-core.version>0.46</webjars-locator-core.version>
+		<classgraph.version>4.8.102</classgraph.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -488,6 +490,18 @@
 				<groupId>org.webjars</groupId>
 				<artifactId>webjars-locator</artifactId>
 				<version>${webjars-locator.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator-core -->
+			<dependency>
+			    <groupId>org.webjars</groupId>
+			    <artifactId>webjars-locator-core</artifactId>
+			    <version>${webjars-locator-core.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
+			<dependency>
+			    <groupId>io.github.classgraph</groupId>
+			    <artifactId>classgraph</artifactId>
+			    <version>${classgraph.version}</version>
 			</dependency>
 			
 		</dependencies>
