--- a/pom.xml
+++ b/pom.xml
@@ -380,10 +380,8 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
-		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
-		<springfox.version>3.0.0</springfox.version> <!-- 3.0.0-SNAPSHOT -->
-		<swagger.version>1.6.2</swagger.version>
-		<swagger2.version>2.1.3</swagger2.version>
+		<springfox.version>3.0.0</springfox.version>
+		<swagger2.version>2.1.9</swagger2.version>
 		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version> 
 		<webjars-locator.version>0.40</webjars-locator.version>
 		<webjars-locator-core.version>0.46</webjars-locator-core.version>
@@ -405,62 +403,7 @@
 			    <artifactId>springfox-swagger-ui</artifactId>
 			    <version>${springfox.version}</version>
 			</dependency> 
-			
-			<dependency>
-		      <groupId>io.swagger.core.v3</groupId>
-		      <artifactId>swagger-annotations</artifactId>
-		      <version>2.1.2</version>
-		      <scope>compile</scope>
-		    </dependency>
-		    <dependency>
-		      <groupId>io.swagger.core.v3</groupId>
-		      <artifactId>swagger-models</artifactId>
-		      <version>2.1.2</version>
-		      <scope>compile</scope>
-		    </dependency>
 		    
-			<!-- https://mvnrepository.com/artifact/io.swagger -->
-			<dependency>
-				<groupId>io.swagger</groupId>
-				<artifactId>swagger-annotations</artifactId>
-				<version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-core</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-models</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-servlet</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jersey-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jersey2-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-hibernate-validations</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			
 			<!-- https://mvnrepository.com/artifact/io.swagger.core.v3 -->
 			<dependency>
 				<groupId>io.swagger.core.v3</groupId>
@@ -476,13 +419,6 @@
 				<groupId>io.swagger.core.v3</groupId>
 				<artifactId>swagger-models</artifactId>
 				<version>${swagger2.version}</version>
-			</dependency>
-			
-			<!-- https://mvnrepository.com/artifact/com.github.xiaoymin/swagger-bootstrap-ui -->
-			<dependency>
-				<groupId>com.github.xiaoymin</groupId>
-				<artifactId>swagger-bootstrap-ui</artifactId>
-				<version>${swagger-bootstrap-ui.version}</version>
 			</dependency>
 			
 			<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
@@ -560,32 +496,10 @@
 			<artifactId>spring-webflux</artifactId>
 		</dependency>
 		
-		<!-- For Swagger2 -->
-        <dependency>
-			<groupId>io.swagger</groupId>
-			<artifactId>swagger-annotations</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-core</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.swagger</groupId>
-		    <artifactId>swagger-models</artifactId>
-		</dependency>
+        <!-- For SpringFox 3.x -->
         <dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-ui</artifactId>
-		    <optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.github.xiaoymin</groupId>
-			<artifactId>swagger-bootstrap-ui</artifactId>
-			<optional>true</optional>
 		</dependency>
 		<!-- For Webjars -->
 		<dependency>
