--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.6.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>webflux-swagger2-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For WebFlux With Swagger2</description>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -374,36 +374,137 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
-		<springfox.version>3.0.0</springfox.version>
-		<swagger2.version>2.1.9</swagger2.version>
-		<webjars-locator.version>0.40</webjars-locator.version>
-		<webjars-locator-core.version>0.46</webjars-locator-core.version>
-		<classgraph.version>4.8.102</classgraph.version>
-		<swagger-bootstrap-ui.version>1.9.6</swagger-bootstrap-ui.version> 
-		<swagger-knife4j-ui.version>3.0.3</swagger-knife4j-ui.version>
-		<swagger-springfox-ui.version>${springfox.version}</swagger-springfox-ui.version> 
+		<springfox.version>2.10.5</springfox.version> <!-- 3.0.0-SNAPSHOT -->
+		<swagger.version>1.6.6</swagger.version>
+		<webjars-locator.version>0.45</webjars-locator.version>
+		<webjars-locator-core.version>0.52</webjars-locator-core.version>
+		<classgraph.version>4.8.149</classgraph.version>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
-			
-			<!-- https://mvnrepository.com/artifact/io.swagger.core.v3 -->
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-bean-validators -->
 			<dependency>
-				<groupId>io.swagger.core.v3</groupId>
-				<artifactId>swagger-core</artifactId>
-				<version>${swagger2.version}</version>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-bean-validators</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-core -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-core</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-data-rest -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-data-rest</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-petstore -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-petstore</artifactId>
+				<version>${springfox.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>io.swagger.core.v3</groupId>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-petstore-webflux</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-schema -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-schema</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spi -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spi</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-config -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-config</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-integration</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration-webflux -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-integration-webflux</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-integration-webmvc -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-integration-webmvc</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-web -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-web</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-webflux -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-webflux</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-webmvc -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-webmvc</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-common -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-common</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger1 -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger1</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-spring-web -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-spring-web</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/io.swagger -->
+			<dependency>
+				<groupId>io.swagger</groupId>
 				<artifactId>swagger-annotations</artifactId>
-				<version>${swagger2.version}</version>
+				<version>${swagger.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>io.swagger.core.v3</groupId>
-				<artifactId>swagger-models</artifactId>
-				<version>${swagger2.version}</version>
-			</dependency>
-			
+
 			<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
 			<dependency>
 				<groupId>org.webjars</groupId>
@@ -412,36 +513,17 @@
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator-core -->
 			<dependency>
-			    <groupId>org.webjars</groupId>
-			    <artifactId>webjars-locator-core</artifactId>
-			    <version>${webjars-locator-core.version}</version>
+				<groupId>org.webjars</groupId>
+				<artifactId>webjars-locator-core</artifactId>
+				<version>${webjars-locator-core.version}</version>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
 			<dependency>
-			    <groupId>io.github.classgraph</groupId>
-			    <artifactId>classgraph</artifactId>
-			    <version>${classgraph.version}</version>
+				<groupId>io.github.classgraph</groupId>
+				<artifactId>classgraph</artifactId>
+				<version>${classgraph.version}</version>
 			</dependency>
-			
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-boot-starter</artifactId>
-			    <version>${springfox.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
-			<dependency>
-			    <groupId>io.springfox</groupId>
-			    <artifactId>springfox-swagger-ui</artifactId>
-			    <version>${swagger-springfox-ui.version}</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/com.github.xiaoymin/knife4j-spring-ui -->
-			<dependency>
-			    <groupId>com.github.xiaoymin</groupId>
-			    <artifactId>knife4j-spring-ui</artifactId>
-			    <version>${swagger-knife4j-ui.version}</version>
-			</dependency>
-			
+
 		</dependencies>
 	</dependencyManagement>
 	
