--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.6.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>webflux-swagger2-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For WebFlux With Swagger2</description>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -374,10 +374,9 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
-		<!-- http://oss.jfrog.org/artifactory/oss-snapshot-local/io/springfox/ -->
-		<springfox.version>2.10.5</springfox.version> <!-- 3.0.0-SNAPSHOT -->
-		<swagger.version>1.5.24</swagger.version>
-		<webjars-locator.version>0.40</webjars-locator.version>
+		<springfox.version>2.10.5</springfox.version>
+		<swagger.version>1.6.6</swagger.version>
+		<webjars-locator.version>0.45</webjars-locator.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -496,7 +495,7 @@
 			    <artifactId>springfox-spring-web</artifactId>
 			    <version>${springfox.version}</version>
 			</dependency>
-			
+
 			<!-- https://mvnrepository.com/artifact/io.swagger -->
 			<dependency>
 				<groupId>io.swagger</groupId>
@@ -511,31 +510,6 @@
 			<dependency>
 			    <groupId>io.swagger</groupId>
 			    <artifactId>swagger-models</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-servlet</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jersey-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-jersey2-jaxrs</artifactId>
-			    <version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>io.swagger</groupId>
-			    <artifactId>swagger-hibernate-validations</artifactId>
 			    <version>${swagger.version}</version>
 			</dependency>
 			
